{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 391,
  "lineage": "d09745c0-1367-a954-245c-15a907abc1e9",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "adbfqdn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "hubfirewall",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/azureFirewalls/hubfirewall/applicationRuleCollections/adbcontrolplanefqdn",
            "name": "adbcontrolplanefqdn",
            "priority": 200,
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "databricks-control-plane-services",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.179.0.0/23",
                  "10.179.2.0/23"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "dbartifactsprodseap.blob.core.windows.net",
                  "dbartifactsprodeap.blob.core.windows.net",
                  "dblogprodseasia.blob.core.windows.net",
                  "prod-southeastasia-observabilityeventhubs.servicebus.windows.net",
                  "cdnjs.com"
                ]
              },
              {
                "description": "",
                "fqdn_tags": null,
                "name": "databricks-dbfs",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.179.0.0/23",
                  "10.179.2.0/23"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "dbfs99ex8g.blob.core.windows.net"
                ]
              },
              {
                "description": "",
                "fqdn_tags": null,
                "name": "storage-accounts",
                "protocol": [
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "10.179.0.0/23",
                  "10.179.2.0/23"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "99ex8gallowedstorage.dfs.core.windows.net"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_storage_account.allowedstorage",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.private",
            "azurerm_subnet.public",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "adbfnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "hubfirewall",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/azureFirewalls/hubfirewall/networkRuleCollections/adbcontrolplanenetwork",
            "name": "adbcontrolplanenetwork",
            "priority": 200,
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "40.78.233.2"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "3306"
                ],
                "name": "databricks-metastore",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "10.179.0.0/23",
                  "10.179.2.0/23"
                ],
                "source_ip_groups": null
              },
              {
                "description": "",
                "destination_addresses": [
                  "52.187.145.107/32"
                ],
                "destination_fqdns": null,
                "destination_ip_groups": null,
                "destination_ports": [
                  "443"
                ],
                "name": "databricks-webapp",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "10.179.0.0/23",
                  "10.179.2.0/23"
                ],
                "source_ip_groups": null
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.private",
            "azurerm_subnet.public",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/networkSecurityGroups/adb-99ex8g-nsg",
            "location": "southeastasia",
            "name": "adb-99ex8g-nsg",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "security_rule": [],
            "tags": {
              "Environment": "Testing",
              "Epoch": "99ex8g",
              "Owner": "hao.wang@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fwpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/publicIPAddresses/hubfirewallpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.212.15.241",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "hubfirewallpublicip",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "adbroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/routeTables/spoke-routetable",
            "location": "southeastasia",
            "name": "spoke-routetable",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "to-firewall",
                "next_hop_in_ip_address": "10.178.0.4",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "52.230.27.216/32",
                "name": "to-scc",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_subnet.hubfw",
            "azurerm_virtual_network.hubvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hubfw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "adb-99ex8g-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.hubvnet",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "plsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.4.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-privatelink",
            "name": "adb-99ex8g-privatelink",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "virtual_network_name": "adb-99ex8g-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.2.0/23"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-private",
            "name": "adb-99ex8g-private",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "virtual_network_name": "adb-99ex8g-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.0/23"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-public",
            "name": "adb-99ex8g-public",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "virtual_network_name": "adb-99ex8g-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-private",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/networkSecurityGroups/adb-99ex8g-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-private"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this",
            "azurerm_subnet.private",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-public",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/networkSecurityGroups/adb-99ex8g-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-public"
          },
          "dependencies": [
            "azurerm_network_security_group.this",
            "azurerm_resource_group.this",
            "azurerm_subnet.public",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "privateudr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-private",
            "route_table_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/routeTables/spoke-routetable",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-private"
          },
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_route_table.adbroute",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.private",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "publicudr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-public",
            "route_table_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/routeTables/spoke-routetable",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/subnets/adb-99ex8g-public"
          },
          "dependencies": [
            "azurerm_firewall.hubfw",
            "azurerm_public_ip.fwpublicip",
            "azurerm_resource_group.this",
            "azurerm_route_table.adbroute",
            "azurerm_subnet.hubfw",
            "azurerm_subnet.public",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hubvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.178.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1d4a8c90-66cc-4a78-8557-40bd247be2f0",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-hub-vnet",
            "location": "southeastasia",
            "name": "adb-99ex8g-hub-vnet",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "tags": {
              "Environment": "Testing",
              "Epoch": "99ex8g",
              "Owner": "hao.wang@databricks.com"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.179.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5375420b-c131-45a5-bcce-cac42d546d16",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet",
            "location": "southeastasia",
            "name": "adb-99ex8g-vnet",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "tags": {
              "Environment": "Testing",
              "Epoch": "99ex8g",
              "Owner": "hao.wang@databricks.com"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hubvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-hub-vnet/virtualNetworkPeerings/peerhubtospoke",
            "name": "peerhubtospoke",
            "remote_virtual_network_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "adb-99ex8g-hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spokevnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-vnet/virtualNetworkPeerings/peerspoketohub",
            "name": "peerspoketohub",
            "remote_virtual_network_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dev-adb-99ex8g-rg/providers/Microsoft.Network/virtualNetworks/adb-99ex8g-hub-vnet",
            "resource_group_name": "adb-dev-adb-99ex8g-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "adb-99ex8g-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.hubvnet",
            "azurerm_virtual_network.this",
            "data.external.me",
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}